shota-kiko-portfolio/src/components/layout.css
/* ... */
@-webkit-keyframes fadeIn {
  0% {
    opacity:0;
  }
  100% {
    opacity:1;
  }
}

@-o-keyframes fadeIn {
  0% {
    opacity:0;
  }
  100% {
    opacity:1;
  }
}

@-ms-keyframes fadeIn {
  0% {
    opacity:0;
  }
  100% {
    opacity:1;
  }
}

.aboutContainer{
  /* border:2px solid red; */
  width:100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  min-height: 100vh;
  height: fit-content;
  padding-top: 6vh;
}


.aboutContent{
  /* border: 2px dashed purple; */
  width: 100%;
  display: flex;
  justify-content: center;
  margin: 0 auto;
  padding-top: 5vh;
}

.aboutLeftHeader{
  width: 100%;
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
}

.aboutLeft{
  /* border: 2px solid green; */
  width: 49.5%;
  height: 80vh;
  font-size: 1.1vw;
  line-height: 1.6;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  align-content: flex-end;
}

.profilePic{
  /* border:2px dashed green; */
  border-radius: 5px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.02);
}

.profilePicContainer{
  /* border:2px solid red; */
  display: flex;
  justify-content: center;
  margin-top: 2vh;
}

.aboutText{
  /* border:2px solid dodgerblue; */
  width: 90%;
  height: 85%;
  margin:0 auto;
  text-align: justify;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  margin-top: 1vh;
}
.textCard{
  /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
  border-radius: 7px; */
  width: 97.5%;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 1vh 1vw ;
}

.text{
  width: 95%;
  font-size: 1rem;
}

.aboutRightHeader{
  width: 100%;
  display: flex;
  justify-content: center;
}


.aboutRight{  
  /* border: 2px solid blue; */
  width: 40%;
  height: 80vh;
  display: flex;
  flex-direction: column;
}


.iconContainer{
  /* border: 1px solid red; */
  height: 60vh;
}

.firstRow{
  /* border: 3px solid pink; */
  margin-top: 5%;
  margin-bottom: 1%;
  display: flex;
  justify-content: space-evenly;
  width: 100%;
  height: 20%;
}

.secondRow{
  /* border: 3px solid pink; */
  margin-top: 3%;
  margin-bottom: 1%;
  
  display: flex;
  justify-content: space-evenly;
  width: 100%;
  height: 20%;
}

.thirdRow{
  /* border: 3px solid pink; */
  margin-top: 3%;
  margin-bottom: 1%;
  
  display: flex;
  justify-content: space-evenly;
  width: 100%;
  height: 20%;
}

.fourthRow{
  /* border: 3px solid pink; */
  margin-top: 3%;
  margin-bottom: 1%;
  
  display: flex;
  justify-content: space-evenly;
  width: 100%;
  height: 20%;
}

.fifthRow{
  /* border: 3px solid pink; */
  margin-top: 3%;
  margin-bottom: 1%;
  
  display: flex;
  justify-content: space-evenly;
  width: 100%;
  height: 20%;
}

.flip-card{
  background-color: transparent;
  perspective: 1000px;
  width: 18%;
  height: 100%;
}

.flip-card-inner{
  position: relative;
  width: 100%;
  height: 100%;
  text-align: center;
  transition: transform 0.6s;
  transform-style: preserve-3d;
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
  border-radius: 7px;
}

.flip-card:hover .flip-card-inner{
  transform: rotateY(180deg);
}

.flip-card-front, .flip-card-back{
  position: absolute;
  width: 100%;
  height: 100%;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
}

.flip-card-front{
  display: flex;
  align-items: center;
  justify-content: center;
  
}

.flip-card-back{
  transform: rotateY(180deg);
  font-family: "Roboto";
  font-size: .7rem;
  border-radius: 7px;
  display: flex;
  align-content: center;
  align-items: center;
  justify-content: center;
  background-color: #37766F;
  color: whitesmoke;
  font-weight: 500;
}

.flip-card-text{
  /* border: 1px solid white; */
  margin-top: 10px;
  padding: 5px 5px;
}

.flip-card-text:hover{
  color: white;
}

i{
  max-width: 16rem;
  font-size: 4vw;
  padding:14px;
  /* border: 1px solid green; */
}

.aboutLink{
  /* border: 2px solid orange; */
  margin:0 auto;
  margin-top: 3vh;
  color: #37766F;
  text-decoration: none;
  cursor: pointer;
  margin-bottom: 2vh;
}

.aboutLink:hover{
  color:#1eb5d4;
}

/* 2k to 4k monitor */
@media screen and (min-width: 2560px) {
  .landing-text{
    font-size: 2.2rem;
  }

  .landingButton{
    margin-left: 33%;
  }
  
  .aboutLeft{
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
  }
  .text{
    font-size: 1.3rem;
  }

  .aboutLeft{
    width: 40%;
  }

  i{
    font-size: 5rem;
  }

  .flip-card-back{
    font-size: 1rem;
  }
}

/* Profile pic for laptop sizes */
@media screen and (max-width: 1500px){
  .profilePicContainer{
    /* border: 2px solid orange; */
    height: fit-content;
    width: fit-content;
    margin-top: 4vh;
    display: flex;
    align-items: flex-end;
  }

  .profilePic{
    /* border: 2px solid black; */
    height: 70%;
  }

  .flip-card{
    width: 20%;
  }

  .flip-card-back{
    font-size: .6rem;
  }

  .text{
    font-size: .9rem;
  }

  .aboutLink{
    margin-bottom: 4vh;
  }
}
/* ... */

